[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gmailsorter"
dynamic = ["version"]
description = "Assign labels to emails in Google Mail based on their similarity to other emails assigned to the same label."
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Jan Janssen", email = "jan.janssen@outlook.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "google-api-python-client==2.198.0",
    "google-auth==2.55.1",
    "google-auth-oauthlib==1.4.0",
    "numpy==2.4.3",
    "tqdm==4.68.4",
    "pandas==3.0.2",
    "scikit-learn==1.8.0",
    "sqlalchemy==2.0.51",
]

[project.optional-dependencies]
webapp = [
    "gunicorn==26.0.0",
    "flask==3.1.3",
    "flask-login==0.6.3",
]

[project.urls]
Homepage = "https://github.com/jan-janssen/gmailsorter"

[project.scripts]
gmailsorter = "gmailsorter.__main__:command_line_parser"
gmailsorter-daemon = "gmailsorter.daemon.__main__:command_line_parser"
gmailsorter-app = "gmailsorter.webapp.app:run_app"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-comprehensions
    "C4",
    # eradicate
    "ERA",
    # pylint
    "PL",
]
ignore = [
    # ignore line-length violations
    "E501",
    # Too many arguments in function definition
    "PLR0913",
]

[tool.hatch.build]
include = [
    "gmailsorter"
]

[tool.hatch.build.hooks.vcs]
version-file = "gmailsorter/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "gmailsorter"
]

[tool.hatch.build.targets.wheel]
packages = [
    "gmailsorter"
]

[tool.hatch.version]
source = "vcs"
path = "gmailsorter/_version.py"
